styles/pages.scss
/* ... */
/*=============== BLOGS (blogs.scss) ===============*/
:root {
  --header-height: 3rem;

  /*========== Colors ==========*/
  --hue-color: 206;
  --black-color: hsl(var(--hue-color), 10%, 4%);
  --black-color-alt: hsl(var(--hue-color), 10%, 8%);
  --title-color: hsl(var(--hue-color), 10%, 95%);
  --title-color-alt: hsl(var(--hue-color), 10%, 75%);
  --text-color: hsl(var(--hue-color), 10%, 65%);
  --text-color-alt: hsl(var(--hue-color), 10%, 45%);
  --white-color: #fff;
  --body-color: hsl(var(--hue-color), 10%, 6%);
  --container-color: hsl(var(--hue-color), 10%, 10%);
  --container-overlay: hsla(var(--hue-color), 10%, 2%, 0.7);
  --container-overlay-alt: hsla(var(--hue-color), 10%, 10%, 0.1);
  --scroll-thumb-color: hsl(var(--hue-color), 10%, 16%);
  --scroll-thumb-color-alt: hsl(var(--hue-color), 10%, 20%);
  --working-color: #ffa53e;
  --finish-color: #3a8841;
  --decommission-color: #ff3e3e;

  /*========== Font and typography ==========*/
  --body-font: "Poppins", "Apple SD Gothic Neo", "Microsoft NeoGothic",
    "Droid sans", sans-serif;
  --biggest-font-size: 5rem;
  --bigger-font-size: 3.5rem;
  --big-font-size: 2.5rem;
  --h2-font-size: 1.25rem;
  --h3-font-size: 1.125rem;
  --normal-font-size: 1rem;
  --small-font-size: 0.813rem;
  --smaller-font-size: 0.75rem;
  --text-line-height: 2rem;

  /*========== Margenes Bottom ==========*/
  --mb-0-5: 0.5rem;
  --mb-0-75: 0.75rem;
  --mb-1: 1rem;
  --mb-1-5: 1.5rem;
  --mb-2: 2rem;
  --mb-2-5: 2.5rem;

  /*========== z index ==========*/
  --z-tooltip: 10;
  --z-fixed: 100;
}

/*=============== RESPONSIVE TYPOGRAPHY ===============*/
@media screen and (min-width: 968px) {
  :root {
    --biggest-font-size: 7.5rem;
    --bigger-font-size: 4.5rem;
    --big-font-size: 4rem;
    --h2-font-size: 1.5rem;
    --h3-font-size: 1.25rem;
    --normal-font-size: 1rem;
    --small-font-size: 0.875rem;
    --smaller-font-size: 0.813rem;
  }
}

.dev-title {
  position: relative;
  width: 100vw;
  height: 55vh;
  max-height: 700px;
  overflow: hidden;
  background-position: 50%;
  background-repeat: no-repeat;
  background-size: cover;

  &::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    background: rgba(14, 16, 17, 0.7);
    z-index: 1;
  }

  .title {
    position: absolute;
    z-index: 1;
    height: 100%;
    width: 100%;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    div {
      overflow: hidden;
    }

    h1 {
      margin: 66px 0 10px;
      font-size: 64px;
      font-family: "Canyon";
    }

    h6 {
      font-size: 18px;
      font-weight: 400;
      text-transform: none;
    }
  }

  .bg-area {
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 0;
  }
}

/*
  ========================================
                CONTENT COMP
  ========================================


=============== NAV AREA ===============*/
.content-comp .nav-area {
  height: 100vh;
  left: 0;
  margin-top: -20px;
  padding-top: 90px;
  position: sticky;
  top: 0;
  width: 260px;
  font-family: var(--body-font);
}

.nav-area .nav-container {
  height: 100%;
  padding-bottom: 30px;
  width: 100%;
}

.nav-area .nav-container .nav-inner {
  height: 100%;
  width: 100%;
}

.nav-area .btn-cancel {
  display: none;
  position: absolute;
  right: 15px;
  top: 15px;
}

.btn-cancel {
  background: #393a40;
  border-radius: 10px;
  display: inline-block;
  font-size: 0;
  height: 30px;
  position: relative;
  text-indent: -9999px;
  width: 30px;
  z-index: 5;
}

.nav-area .nav-items {
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.content-comp .nav-area .nav-items .cate-level-1 {
  position: relative;
}

.nav-area .nav-items .cate-level-1>.item {
  background: transparent;
  border-radius: 4px;
  font-size: 18px;
  font-weight: 500;
  line-height: 1.4;
  margin-bottom: 4px;
  position: relative;
  transition: all 0.1s ease;
  width: 100%;
}

.nav-area .nav-items .item.is--on {
  color: #e8e9ee;
  font-weight: 700;
}

.nav-area .nav-items .cate-level-1.is--open>.item {
  background: #1f2026;
}

.nav-area .nav-items .cate-level-1>.item span {
  position: absolute;
  left: 15px;
}

.nav-area .nav-items .level-2-wrap {
  display: none;
  margin: 6px 0;
}

.nav-area .nav-items .cate-level-1.is--open .level-2-wrap {
  display: block;
}

.content-comp .nav-area .nav-items .cate-level-1 .level-2-wrap {
  max-height: 400px;
  overflow-y: auto;
}

.nav-area .nav-items .level-2-wrap .cate-level-2 .item {
  font-size: 16px !important;
  font-size: 16.5px;
  font-weight: 400;
  line-height: 1.4;
}

.nav-area .nav-items .item {
  color: #78797d;
  display: inline-block;
  padding: 7px 12px 7px 48px;
  position: relative;
  transition: all 0.1s ease;
  width: 100%;
  word-break: keep-all;
  z-index: 1;
}


/*=============== CONTENT AREA ===============*/
.content-comp {
  text-align: center;
  z-index: 1;
  display: flex;
  justify-content: center;
  padding: 0 20px;
  position: relative;
}

.content-comp .content-warpper {
  display: grid;
  grid-template-columns: 320px auto;
  position: relative;
  text-align: left;
}

.content-comp .content-area {
  padding-top: 70px;
  position: relative;
}

.content-comp .item-list>.title {
  font-weight: 700;
  height: 30px;
  margin-bottom: 30px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.content-comp .item-list.top-group {
  margin-bottom: 40px;
}

.content-area .item-list.top-group .title h1::before {
  transition: all 0.15s;
}

.content-area .item-list.top-group:hover .title h1::before {
  margin-left: 0px;
  opacity: 1;
}

.content-area .item-list.top-group .title h1::before {
  content: "🖥️ ";
  margin-left: -35px;
  opacity: 0;
}

.card-area {
  display: grid;
  grid-template-columns: repeat(5, 330px);
  grid-gap: 30px;
}
/* ... */

